--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "body-parser": "^1.17.1",
     "db": "^1.0.6",
+    "dotenv": "^4.0.0",
     "express": "^4.15.2",
     "knex": "^0.12.9",
     "pg": "^6.1.5",
